; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cmx/extr_cmx.c_cmx_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cmx/extr_cmx.c_cmx_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { %struct.cmx_softc* }
%struct.cmx_softc = type { i32, i8**, i32, i32, i64, i64 }
%struct.uio = type { i32 }

@ENXIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"called (len=%d flag=%b)\0A\00", align 1
@MODEBITS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"disabling polling\0A\00", align 1
@PZERO = common dso_local global i32 0, align 4
@CMX_MIN_RDLEN = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@O_NONBLOCK = common dso_local global i32 0, align 4
@BSR_BULK_IN_FULL = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [16 x i8] c"buf[%02x]=%02x\0A\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"msgsz=%lu\0A\00", align 1
@.str.4 = private unnamed_addr constant [21 x i8] c"uiomove failed (%d)\0A\00", align 1
@SCR_READER_TO_HOST_DONE = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [20 x i8] c"success (DTR=%02x)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, %struct.uio*, i32)* @cmx_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmx_read(%struct.cdev* %0, %struct.uio* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cdev*, align 8
  %6 = alloca %struct.uio*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.cmx_softc*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.cdev* %0, %struct.cdev** %5, align 8
  store %struct.uio* %1, %struct.uio** %6, align 8
  store i32 %2, i32* %7, align 4
  %16 = load %struct.cdev*, %struct.cdev** %5, align 8
  %17 = getelementptr inbounds %struct.cdev, %struct.cdev* %16, i32 0, i32 0
  %18 = load %struct.cmx_softc*, %struct.cmx_softc** %17, align 8
  store %struct.cmx_softc* %18, %struct.cmx_softc** %8, align 8
  %19 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %20 = icmp eq %struct.cmx_softc* %19, null
  br i1 %20, label %26, label %21

21:                                               ; preds = %3
  %22 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %23 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %22, i32 0, i32 5
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %21, %3
  %27 = load i32, i32* @ENXIO, align 4
  store i32 %27, i32* %4, align 4
  br label %273

28:                                               ; preds = %21
  %29 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %30 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.uio*, %struct.uio** %6, align 8
  %33 = getelementptr inbounds %struct.uio, %struct.uio* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* @MODEBITS, align 4
  %37 = call i32 (i32, i8*, ...) @DEBUG_printf(i32 %31, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %34, i32 %35, i32 %36)
  %38 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %39 = call i32 @CMX_LOCK(%struct.cmx_softc* %38)
  %40 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %41 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %40, i32 0, i32 4
  %42 = load i64, i64* %41, align 8
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %63

44:                                               ; preds = %28
  %45 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %46 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  %48 = call i32 (i32, i8*, ...) @DEBUG_printf(i32 %47, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %49 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %50 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %49, i32 0, i32 3
  %51 = call i32 @callout_stop(i32* %50)
  %52 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %53 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %52, i32 0, i32 4
  store i64 0, i64* %53, align 8
  %54 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %55 = call i32 @CMX_UNLOCK(%struct.cmx_softc* %54)
  %56 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %57 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %56, i32 0, i32 3
  %58 = call i32 @callout_drain(i32* %57)
  %59 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %60 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %59, i32 0, i32 2
  %61 = load i32, i32* @PZERO, align 4
  %62 = call i32 @selwakeuppri(i32* %60, i32 %61)
  br label %66

63:                                               ; preds = %28
  %64 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %65 = call i32 @CMX_UNLOCK(%struct.cmx_softc* %64)
  br label %66

66:                                               ; preds = %63, %44
  %67 = load %struct.uio*, %struct.uio** %6, align 8
  %68 = getelementptr inbounds %struct.uio, %struct.uio* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = icmp eq i32 %69, 0
  br i1 %70, label %71, label %72

71:                                               ; preds = %66
  store i32 0, i32* %4, align 4
  br label %273

72:                                               ; preds = %66
  %73 = load %struct.uio*, %struct.uio** %6, align 8
  %74 = getelementptr inbounds %struct.uio, %struct.uio* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 4
  %76 = load i32, i32* @CMX_MIN_RDLEN, align 4
  %77 = icmp slt i32 %75, %76
  br i1 %77, label %78, label %80

78:                                               ; preds = %72
  %79 = load i32, i32* @EINVAL, align 4
  store i32 %79, i32* %4, align 4
  br label %273

80:                                               ; preds = %72
  %81 = load i32, i32* %7, align 4
  %82 = load i32, i32* @O_NONBLOCK, align 4
  %83 = and i32 %81, %82
  %84 = icmp ne i32 %83, 0
  br i1 %84, label %85, label %93

85:                                               ; preds = %80
  %86 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %87 = load i32, i32* @BSR_BULK_IN_FULL, align 4
  %88 = call i64 @cmx_test_BSR(%struct.cmx_softc* %86, i32 %87, i32 0)
  %89 = icmp ne i64 %88, 0
  br i1 %89, label %90, label %92

90:                                               ; preds = %85
  %91 = load i32, i32* @EAGAIN, align 4
  store i32 %91, i32* %4, align 4
  br label %273

92:                                               ; preds = %85
  br label %93

93:                                               ; preds = %92, %80
  store i32 0, i32* %14, align 4
  br label %94

94:                                               ; preds = %125, %93
  %95 = load i32, i32* %14, align 4
  %96 = icmp slt i32 %95, 5
  br i1 %96, label %97, label %128

97:                                               ; preds = %94
  %98 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %99 = load i32, i32* @BSR_BULK_IN_FULL, align 4
  %100 = call i32 @cmx_wait_BSR(%struct.cmx_softc* %98, i32 %99, i32 1)
  store i32 %100, i32* %11, align 4
  %101 = icmp ne i32 %100, 0
  br i1 %101, label %102, label %104

102:                                              ; preds = %97
  %103 = load i32, i32* %11, align 4
  store i32 %103, i32* %4, align 4
  br label %273

104:                                              ; preds = %97
  %105 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %106 = call i8* @cmx_read_DTR(%struct.cmx_softc* %105)
  %107 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %108 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %107, i32 0, i32 1
  %109 = load i8**, i8*** %108, align 8
  %110 = load i32, i32* %14, align 4
  %111 = sext i32 %110 to i64
  %112 = getelementptr inbounds i8*, i8** %109, i64 %111
  store i8* %106, i8** %112, align 8
  %113 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %114 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %113, i32 0, i32 0
  %115 = load i32, i32* %114, align 8
  %116 = load i32, i32* %14, align 4
  %117 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %118 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %117, i32 0, i32 1
  %119 = load i8**, i8*** %118, align 8
  %120 = load i32, i32* %14, align 4
  %121 = sext i32 %120 to i64
  %122 = getelementptr inbounds i8*, i8** %119, i64 %121
  %123 = load i8*, i8** %122, align 8
  %124 = call i32 (i32, i8*, ...) @DEBUG_printf(i32 %115, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i32 %116, i8* %123)
  br label %125

125:                                              ; preds = %104
  %126 = load i32, i32* %14, align 4
  %127 = add nsw i32 %126, 1
  store i32 %127, i32* %14, align 4
  br label %94

128:                                              ; preds = %94
  %129 = load i32, i32* @CMX_MIN_RDLEN, align 4
  %130 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %131 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %130, i32 0, i32 1
  %132 = load i8**, i8*** %131, align 8
  %133 = getelementptr inbounds i8*, i8** %132, i64 1
  %134 = load i8*, i8** %133, align 8
  %135 = ptrtoint i8* %134 to i8
  %136 = sext i8 %135 to i32
  %137 = and i32 255, %136
  %138 = add nsw i32 %129, %137
  %139 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %140 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %139, i32 0, i32 1
  %141 = load i8**, i8*** %140, align 8
  %142 = getelementptr inbounds i8*, i8** %141, i64 2
  %143 = load i8*, i8** %142, align 8
  %144 = ptrtoint i8* %143 to i8
  %145 = sext i8 %144 to i32
  %146 = shl i32 %145, 8
  %147 = and i32 65280, %146
  %148 = add nsw i32 %138, %147
  %149 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %150 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %149, i32 0, i32 1
  %151 = load i8**, i8*** %150, align 8
  %152 = getelementptr inbounds i8*, i8** %151, i64 3
  %153 = load i8*, i8** %152, align 8
  %154 = ptrtoint i8* %153 to i8
  %155 = sext i8 %154 to i32
  %156 = shl i32 %155, 16
  %157 = and i32 16711680, %156
  %158 = add nsw i32 %148, %157
  %159 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %160 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %159, i32 0, i32 1
  %161 = load i8**, i8*** %160, align 8
  %162 = getelementptr inbounds i8*, i8** %161, i64 4
  %163 = load i8*, i8** %162, align 8
  %164 = ptrtoint i8* %163 to i8
  %165 = sext i8 %164 to i32
  %166 = shl i32 %165, 24
  %167 = and i32 -16777216, %166
  %168 = add i32 %158, %167
  %169 = zext i32 %168 to i64
  store i64 %169, i64* %9, align 8
  %170 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %171 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %170, i32 0, i32 0
  %172 = load i32, i32* %171, align 8
  %173 = load i64, i64* %9, align 8
  %174 = call i32 (i32, i8*, ...) @DEBUG_printf(i32 %172, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i64 %173)
  %175 = load %struct.uio*, %struct.uio** %6, align 8
  %176 = getelementptr inbounds %struct.uio, %struct.uio* %175, i32 0, i32 0
  %177 = load i32, i32* %176, align 4
  %178 = sext i32 %177 to i64
  %179 = load i64, i64* %9, align 8
  %180 = icmp ult i64 %178, %179
  br i1 %180, label %181, label %183

181:                                              ; preds = %128
  %182 = load i32, i32* @EINVAL, align 4
  store i32 %182, i32* %4, align 4
  br label %273

183:                                              ; preds = %128
  store i32 5, i32* %13, align 4
  br label %184

184:                                              ; preds = %245, %183
  %185 = load i64, i64* %9, align 8
  %186 = icmp ugt i64 %185, 0
  br i1 %186, label %187, label %250

187:                                              ; preds = %184
  %188 = load i64, i64* %9, align 8
  %189 = call i32 @MIN(i64 %188, i32 8)
  store i32 %189, i32* %12, align 4
  %190 = load i32, i32* %13, align 4
  store i32 %190, i32* %15, align 4
  br label %191

191:                                              ; preds = %223, %187
  %192 = load i32, i32* %15, align 4
  %193 = load i32, i32* %12, align 4
  %194 = icmp slt i32 %192, %193
  br i1 %194, label %195, label %226

195:                                              ; preds = %191
  %196 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %197 = load i32, i32* @BSR_BULK_IN_FULL, align 4
  %198 = call i32 @cmx_wait_BSR(%struct.cmx_softc* %196, i32 %197, i32 1)
  store i32 %198, i32* %11, align 4
  %199 = icmp ne i32 %198, 0
  br i1 %199, label %200, label %202

200:                                              ; preds = %195
  %201 = load i32, i32* %11, align 4
  store i32 %201, i32* %4, align 4
  br label %273

202:                                              ; preds = %195
  %203 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %204 = call i8* @cmx_read_DTR(%struct.cmx_softc* %203)
  %205 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %206 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %205, i32 0, i32 1
  %207 = load i8**, i8*** %206, align 8
  %208 = load i32, i32* %15, align 4
  %209 = sext i32 %208 to i64
  %210 = getelementptr inbounds i8*, i8** %207, i64 %209
  store i8* %204, i8** %210, align 8
  %211 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %212 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %211, i32 0, i32 0
  %213 = load i32, i32* %212, align 8
  %214 = load i32, i32* %15, align 4
  %215 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %216 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %215, i32 0, i32 1
  %217 = load i8**, i8*** %216, align 8
  %218 = load i32, i32* %15, align 4
  %219 = sext i32 %218 to i64
  %220 = getelementptr inbounds i8*, i8** %217, i64 %219
  %221 = load i8*, i8** %220, align 8
  %222 = call i32 (i32, i8*, ...) @DEBUG_printf(i32 %213, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i32 %214, i8* %221)
  br label %223

223:                                              ; preds = %202
  %224 = load i32, i32* %15, align 4
  %225 = add nsw i32 %224, 1
  store i32 %225, i32* %15, align 4
  br label %191

226:                                              ; preds = %191
  %227 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %228 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %227, i32 0, i32 1
  %229 = load i8**, i8*** %228, align 8
  %230 = load i32, i32* %12, align 4
  %231 = load %struct.uio*, %struct.uio** %6, align 8
  %232 = call i32 @uiomove(i8** %229, i32 %230, %struct.uio* %231)
  store i32 %232, i32* %11, align 4
  %233 = icmp ne i32 %232, 0
  br i1 %233, label %234, label %241

234:                                              ; preds = %226
  %235 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %236 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %235, i32 0, i32 0
  %237 = load i32, i32* %236, align 8
  %238 = load i32, i32* %11, align 4
  %239 = call i32 (i32, i8*, ...) @DEBUG_printf(i32 %237, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0), i32 %238)
  %240 = load i32, i32* %11, align 4
  store i32 %240, i32* %4, align 4
  br label %273

241:                                              ; preds = %226
  %242 = load i32, i32* %13, align 4
  %243 = icmp ne i32 %242, 0
  br i1 %243, label %244, label %245

244:                                              ; preds = %241
  store i32 0, i32* %13, align 4
  br label %245

245:                                              ; preds = %244, %241
  %246 = load i32, i32* %12, align 4
  %247 = sext i32 %246 to i64
  %248 = load i64, i64* %9, align 8
  %249 = sub i64 %248, %247
  store i64 %249, i64* %9, align 8
  br label %184

250:                                              ; preds = %184
  %251 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %252 = load i32, i32* @BSR_BULK_IN_FULL, align 4
  %253 = call i32 @cmx_wait_BSR(%struct.cmx_softc* %251, i32 %252, i32 1)
  store i32 %253, i32* %11, align 4
  %254 = icmp ne i32 %253, 0
  br i1 %254, label %255, label %257

255:                                              ; preds = %250
  %256 = load i32, i32* %11, align 4
  store i32 %256, i32* %4, align 4
  br label %273

257:                                              ; preds = %250
  %258 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %259 = load i32, i32* @SCR_READER_TO_HOST_DONE, align 4
  %260 = call i32 @cmx_sync_write_SCR(%struct.cmx_softc* %258, i32 %259)
  store i32 %260, i32* %11, align 4
  %261 = icmp ne i32 %260, 0
  br i1 %261, label %262, label %264

262:                                              ; preds = %257
  %263 = load i32, i32* %11, align 4
  store i32 %263, i32* %4, align 4
  br label %273

264:                                              ; preds = %257
  %265 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %266 = call i8* @cmx_read_DTR(%struct.cmx_softc* %265)
  %267 = ptrtoint i8* %266 to i32
  store i32 %267, i32* %10, align 4
  %268 = load %struct.cmx_softc*, %struct.cmx_softc** %8, align 8
  %269 = getelementptr inbounds %struct.cmx_softc, %struct.cmx_softc* %268, i32 0, i32 0
  %270 = load i32, i32* %269, align 8
  %271 = load i32, i32* %10, align 4
  %272 = call i32 (i32, i8*, ...) @DEBUG_printf(i32 %270, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i32 %271)
  store i32 0, i32* %4, align 4
  br label %273

273:                                              ; preds = %264, %262, %255, %234, %200, %181, %102, %90, %78, %71, %26
  %274 = load i32, i32* %4, align 4
  ret i32 %274
}

declare dso_local i32 @DEBUG_printf(i32, i8*, ...) #1

declare dso_local i32 @CMX_LOCK(%struct.cmx_softc*) #1

declare dso_local i32 @callout_stop(i32*) #1

declare dso_local i32 @CMX_UNLOCK(%struct.cmx_softc*) #1

declare dso_local i32 @callout_drain(i32*) #1

declare dso_local i32 @selwakeuppri(i32*, i32) #1

declare dso_local i64 @cmx_test_BSR(%struct.cmx_softc*, i32, i32) #1

declare dso_local i32 @cmx_wait_BSR(%struct.cmx_softc*, i32, i32) #1

declare dso_local i8* @cmx_read_DTR(%struct.cmx_softc*) #1

declare dso_local i32 @MIN(i64, i32) #1

declare dso_local i32 @uiomove(i8**, i32, %struct.uio*) #1

declare dso_local i32 @cmx_sync_write_SCR(%struct.cmx_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
